add files for module D4

--- a/NewsPaper/news/templates/news/posts.html
+++ b/NewsPaper/news/templates/news/posts.html
@@ -11,7 +11,7 @@ News
         <table class="table">
             <tr>
                 <th scope="col">Название</th>
-                <th scope="col">Текст</th>
+                <th scope="col">Дата публикации</th>
                 <th scope="col">Текст</th>
             </tr>
         {% for post in posts %}
