--- a/NewsPaper/news/templates/news/posts.html
+++ b/NewsPaper/news/templates/news/posts.html
@@ -1,28 +1,46 @@
 {% extends 'layout/default.html' %}
 {% load my_filters %}
+
 {% block title %}
 News
 {% endblock title %}
 
+
 {% block content %}
-    <h1>Все новости и статьи</h1>
-    <h2>Всего {{ posts|length }}</h2>
-    {% if posts %}
-        <table class="table">
-            <tr>
-                <th scope="col">Название</th>
-                <th scope="col">Дата публикации</th>
-                <th scope="col">Текст</th>
-            </tr>
-        {% for post in posts %}
-            <tr>
-                <td>{{ post.title|Censor }}</td>
-                <td>{{ post.dateCreation|date:'d.m.Y' }}</td>
-                <td>{{ post.text|truncatechars:50|Censor }}</td>
-            </tr>
-        {% endfor %}
-        </table>
-    {% else %}
-        <h2>Нет новостей или статей</h2>
-    {% endif %}
+
+<h1>Все новости и статьи</h1>
+<h2>Всего {{ posts|length }}</h2>
+{% if posts %}
+    <form method="GET">
+        {{ filter.form }}
+        <input class="btn btn-primary" type="submit" value="Поиск">
+    </form>
+    <table class="table">
+        <tr>
+            <th scope="col">Название</th>
+            <th scope="col">Дата публикации</th>
+            <th scope="col">Текст</th>
+            <th scope="col">Действия</th>
+        </tr>
+    {% for post in filter.qs %}
+        <tr>
+            <td><a href="{% url 'news:post_detail' post.id %}">{{ post.title|Censor }}</a></td>
+            <td>{{ post.dateCreation|date:'d.m.Y' }}</td>
+            <td>{{ post.text|truncatechars:50|Censor }}</td>
+            <td>
+                <a href="{% url 'news:post_edit' post.id %}">Редактировать</a> |
+                <a href="{% url 'news:post_delete' post.id %}">Удалить</a>
+            </td>
+        </tr>
+    {% endfor %}
+    </table>
+
+    <div style="text-align: center">
+        {% include 'news/parts/paginator.html' %}
+    </div>
+
+{% else %}
+    <h2>Нет новостей или статей</h2>
+{% endif %}
+
 {% endblock content %}
