little cosmetic fix

--- a/NewsPaper/news/templates/news/post_create.html
+++ b/NewsPaper/news/templates/news/post_create.html
@@ -11,7 +11,7 @@ Post create
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input class="btn btn-success" type="submit" value="Опубликовать">
+    <input class="btn btn-success btn-hover" type="submit" value="Опубликовать">
 </form>
 
 {% endblock content %}
