--- a/NewsPaper/news/templates/news/post_delete.html
+++ b/NewsPaper/news/templates/news/post_delete.html
@@ -23,7 +23,7 @@ Post delete
 </div>
 <form method="post">
   {% csrf_token %}
-  <input class="btn btn-success" type="submit" value="Удалить">
+  <input class="btn btn-success btn-hover" type="submit" value="Удалить">
 </form>
 
 {% endblock content %}
