--- a/NewsPaper/news/templates/news/posts.html
+++ b/NewsPaper/news/templates/news/posts.html
@@ -53,7 +53,7 @@ News
     </div>
     <div>
         <a href="{% url 'news:post_create' %}">
-            <button class="btn btn-success"> + </button>
+            <button class="btn btn-success btn-hover"> + </button>
         </a>
     </div>
         {% endif %}
