--- a/NewsPaper/templates/layout/default.html
+++ b/NewsPaper/templates/layout/default.html
@@ -11,18 +11,26 @@
 <link rel="stylesheet" href="assets/css/style.css">
 <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
+<style>
+    .btn-hover:hover {
+        color: green;
+        background-color: white;
+        border-color: green;
+    }
+</style>
+
 <title>
-{% block title %}
-{% endblock title %}
+    {% block title %}
+    {% endblock title %}
 </title>
 </head>
 <body>
-{% include './parts/header.html' %}
-<div class="container">
- {% block content %}
- {% endblock content %}
-</div>
+    {% include './parts/header.html' %}
+    <div class="container">
+        {% block content %}
+        {% endblock content %}
+    </div>
 
-{% include './parts/footer.html' %}
+    {% include './parts/footer.html' %}
 </body>
 </html>
