--- a/NewsPaper/news/templates/news/post_detail.html
+++ b/NewsPaper/news/templates/news/post_detail.html
@@ -15,7 +15,7 @@ Post
         <div>
             Название: <span class="badge bg-info">{{ post.title|Censor }}</span>
             Дата: <span class="badge bg-info">{{ post.dateCreation|date:'d.m.Y H:j' }}</span>
-            Категория:<span class="badge bg-info">{{ post.postCategory.name }}</span>
+            Категория:<span class="badge bg-info">{{ post.postCategory }}</span>
         </div>
     </div>
     <div class="card-body">
